--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
+body{
+  background-color: rgb(240, 240, 240);
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
