--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,26 @@ body{
 .square{
   margin-bottom: 4px;
   width:15vw;
-  height: 15vw;
+  height:15vw;
 }
-.smsquare{
+.smlsquare{
   margin-bottom: 4px;
   width:40vw;
-  height: 40vw;
+  height:40vw;
+}
+.squarebox{
+  position: relative;
+  width: 50%;
+}
+.squarebox:after{
+  content: '';
+  display: block;
+  padding-bottom: 100%;
+}
+.content{
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 code {
